# researcher

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
researcher/: __init__.py  artifacts.py  cli.py  detect.py  reports.py  scanner.py  threats.py  windows_artifacts.py  windows_scanner.py
researcher/rules/: __init__.py  builtin.yar
tests/: test_smoke.py  test_windows_smoke.py
