[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "researcher"
dynamic = ["version"]
description = "Readonly Linux server backup log scanner for DFIR triage"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
researcher-scan = "researcher.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
